# CV_VisionStudio

./: .gitignore  environment.yml  pyproject.toml
notebooks/: cnn_dl.ipynb  cv-course.ipynb
src/vision_studio/: __init__.py  main.py  types.py
src/vision_studio/augmentation/: __init__.py  base.py  image_augmentations.py  preprocessing.py  utils.py
src/vision_studio/data_loader/: __init__.py  base.py  simple_loader.py
src/vision_studio/dataset/: __init__.py  base.py  classification.py  coco.py  imagenet.py  mnist.py
src/vision_studio/deliver/: __init__.py  base.py  simple.py  wandb.py
src/vision_studio/evaluate/: __init__.py  base.py  classication.py  detection.py  utils.py
src/vision_studio/inference/: __init__.py  base.py  classification.py  simple.py  wandb.py
src/vision_studio/models/: __init__.py  base.py  image_classifier.py
src/vision_studio/trainer/: __init__.py  base.py  classification_trainer.py  simple_trainer.py  wandb_trainer.py
src/vision_studio/transforms/: __init__.py  transforms.py
src/vision_studio/visualise/: __init__.py  utils.py
vision-studio-uv/: main.py  pyproject.toml
