[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-studio"
version = "0.0.1"
description = "Full computer vision pipeline"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vision-studio = "vision_studio.main:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "D"]

[tool.black]
line-length = 88