[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-studio"
version = "0.0.1"
description = "Full computer vision pipeline"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vision-studio = "vision_studio.main:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "D"]

[tool.black]
line-length = 88

[tool.uv.workspace]
members = [
    "vision-studio-uv",
]
